Fixed text overflow on wallet tabs, switched manifest logo.

--- a/src/Components/Wallet/Wallet.scss
+++ b/src/Components/Wallet/Wallet.scss
@@ -7,6 +7,7 @@
         justify-content: center;
         align-items: center;
         img{
+            border-radius: 0.5em;
             width: 3em;
         }
     }
